<LinearLayout
    android:id="@+id/scrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/lightBlue"
    android:orientation="vertical">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/ingredient_recycle_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"/>

</LinearLayout>